--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,11 @@ environment:
   sdk: '>=2.14.3 <3.0.0'
 
 dependencies:
+  freezed_annotation: ^0.15.0
+  meta: ^1.7.0
   path: ^1.8.0
-  riverpod: ^0.14.0+3
 
 dev_dependencies:
+  build_runner: ^2.1.4
+  freezed: ^0.15.0+1
   lint: ^1.7.2
